<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acceder_unavez">access one time</string>
    <string name="acceso_aprobado">Access request accepted</string>
    <string name="acceso_aprobado_descr">Your app access request has been accepted</string>
    <string name="acceso_denegado">Access denied</string>
    <string name="acceso_pendiente">Your access request is already pending review</string>
    <string name="acceso_solicitado">Your access request has been sent</string>
    <string name="aceptar">OK</string>
    <string name="ad_continuar">Not now, thanks</string>
    <string name="ad_instalar">INSTALL</string>
    <string name="ad_saltar">Skip</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="admin">Administrator:</string>
    <string name="ads_privacy">Ads privacy</string>
    <string name="ahora">Now</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anteriores">Previous</string>
    <string name="antiguedad">Age date</string>
    <string name="anyadir">Add</string>
    <string name="anyo">Year</string>
    <string name="anyos">Years</string>
    <string name="anyos_abrev">y.</string>
    <string name="apnxt_6_seconds">6 sec</string>
    <string name="apnxt_first_label">First game label First game label</string>
    <string name="apnxt_install_btn">Install</string>
    <string name="apnxt_play_this_video">Play this video</string>
    <string name="apnxt_thanks">Thanks for watching!</string>
    <string name="apnxt_which_video">Which Video <b>would you like to watch?</b></string>
    <string name="apnxt_which_video_title">Which Video</string>
    <string name="apnxt_would_you_like">would you like to watch?</string>
    <string name="apnxt_would_you_like_break_line">"would you like
to watch?"</string>
    <string name="apnxt_you_will_be_redirected">You will be redirected to Google Play once the ad will finish</string>
    <string name="app_name">ironsourceadapter</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="applovin_list_item_image_description">Displays more info about the list item.</string>
    <string name="appnoreg">Application not registered</string>
    <string name="appreco">Recommended app</string>
    <string name="aprobado">Approved</string>
    <string name="aviso">Notice</string>
    <string name="avisodenegarprivados">This user can no longer send you private messages</string>
    <string name="avisos">Receive alerts</string>
    <string name="back_button_text">Go back</string>
    <string name="base_url">https://metricreceiver.cellrebel.com/</string>
    <string name="bot">Assistant</string>
    <string name="bot_frase">I suggest you to try this app</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="busc_antiguedad">Max date</string>
    <string name="busc_cat">Category</string>
    <string name="busc_orden">Sort by</string>
    <string name="busc_precio">Max price</string>
    <string name="busc_texto">With the text</string>
    <string name="buscar">Search</string>
    <string name="campaign.appName">getAppName</string>
    <string name="campaign.iconUrl">getIconUrl</string>
    <string name="campaign.imageUrl">getImageUrl</string>
    <string name="cancelar">Cancel</string>
    <string name="cargando">Loading..</string>
    <string name="cargando_icohome">Loading home icon..</string>
    <string name="cargando_recursos">Loading resources..</string>
    <string name="cargando_splash">Loading startup image..</string>
    <string name="cast_ad_label">Ad</string>
    <string name="cast_casting_to_device">Casting to %1$s</string>
    <string name="cast_closed_captions">Closed captions</string>
    <string name="cast_closed_captions_unavailable">Closed captions unavailable</string>
    <string name="cast_connecting_to_device">Connecting to %1$s</string>
    <string name="cast_device_chooser_searching_for_devices">Finding devices</string>
    <string name="cast_device_chooser_title">Cast to</string>
    <string name="cast_disconnect">Disconnect</string>
    <string name="cast_dynamic_group_name_format">%1$s + %2$d</string>
    <string name="cast_expanded_controller_ad_image_description">Image displayed while the cast receiver is playing an ad</string>
    <string name="cast_expanded_controller_ad_in_progress">Ad in progress…</string>
    <string name="cast_expanded_controller_background_image">Album art</string>
    <string name="cast_expanded_controller_live_head_description">Current position is at the head of the live stream</string>
    <string name="cast_expanded_controller_live_stream_indicator">Live stream</string>
    <string name="cast_expanded_controller_loading">Loading…</string>
    <string name="cast_expanded_controller_skip_ad_label">Skip Ad</string>
    <string name="cast_expanded_controller_skip_ad_text">You can skip ad in %1$d…</string>
    <string name="cast_forward">Forward</string>
    <string name="cast_forward_10">Forward ten seconds</string>
    <string name="cast_forward_30">Forward thirty seconds</string>
    <string name="cast_intro_overlay_button_text">@android:string/ok</string>
    <string name="cast_invalid_stream_duration_text">--:--</string>
    <string name="cast_invalid_stream_position_text">--:--</string>
    <string name="cast_live_label">LIVE</string>
    <string name="cast_mute">Mute</string>
    <string name="cast_notification_connected_message">Connected to %1$s</string>
    <string name="cast_notification_connecting_message">Connecting to %1$s</string>
    <string name="cast_notification_default_channel_name">Cast</string>
    <string name="cast_notification_disconnect">Disconnect</string>
    <string name="cast_pause">Pause</string>
    <string name="cast_play">Play</string>
    <string name="cast_rewind">Rewind</string>
    <string name="cast_rewind_10">Rewind ten seconds</string>
    <string name="cast_rewind_30">Rewind thirty seconds</string>
    <string name="cast_seek_bar">Playback seek control</string>
    <string name="cast_skip_next">Skip to next item</string>
    <string name="cast_skip_prev">Skip to previous item</string>
    <string name="cast_stop">Stop</string>
    <string name="cast_stop_live_stream">Stop live stream</string>
    <string name="cast_tracks_chooser_dialog_audio">Audio</string>
    <string name="cast_tracks_chooser_dialog_cancel">Cancel</string>
    <string name="cast_tracks_chooser_dialog_closed_captions">Closed Captions</string>
    <string name="cast_tracks_chooser_dialog_default_track_name">Track %1$d</string>
    <string name="cast_tracks_chooser_dialog_none">None</string>
    <string name="cast_tracks_chooser_dialog_ok">OK</string>
    <string name="cast_tracks_chooser_dialog_subtitles">Subtitles</string>
    <string name="cast_unmute">Unmute</string>
    <string name="cast_wifi_warning_description">"Make sure your device and the Cast device are on the same Wi-Fi network. 

Learn more"</string>
    <string name="cast_wifi_warning_title">"Check your Wi-Fi network 
"</string>
    <string name="cast_zero_devices_found">"No devices found.
"</string>
    <string name="cast_zero_devices_found_done_button_label">Done</string>
    <string name="cast_zero_devices_learn_more_description">Learn more about how you can cast your content to other devices.</string>
    <string name="cat_sinchats">"This category doesn't have chats"</string>
    <string name="categorias">Chats categories</string>
    <string name="cerrar">Close</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chat_acceso">Access</string>
    <string name="chat_contra_necesaria">You must enter the password</string>
    <string name="chat_introduce_contra">Enter password</string>
    <string name="chatprivadocon">Private chat with</string>
    <string name="chats_maspopulares">Popular chats</string>
    <string name="chats_nuevos">New chats</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="codigo_invit">Access code:</string>
    <string name="codigo_invit_val">This code expires in 48 hours</string>
    <string name="codigo_ko">Access code is not valid</string>
    <string name="com_facebook_device_auth_instructions">Visit &lt;b>facebook.com/device&lt;/b> and enter the code shown above.</string>
    <string name="com_facebook_image_download_unknown_error">Unexpected error while downloading an image.</string>
    <string name="com_facebook_internet_permission_error_message">WebView login requires INTERNET permission</string>
    <string name="com_facebook_internet_permission_error_title">AndroidManifest Error</string>
    <string name="com_facebook_like_button_liked">Liked</string>
    <string name="com_facebook_like_button_not_liked">Like</string>
    <string name="com_facebook_loading">Loading…</string>
    <string name="com_facebook_loginview_cancel_action">Cancel</string>
    <string name="contra_act">Current Password</string>
    <string name="contra_nueva">New Password</string>
    <string name="contra_repe">Repeat Password</string>
    <string name="descr">Description</string>
    <string name="enviar">Send</string>
    <string name="nombre">Name</string>
    <string name="selecciona">Select..</string>
    <string name="wortise_data_request_text">Provide the following information to improve your user experience:</string>
    <string name="wortise_input_age">Input your age</string>
    <string name="wortise_input_gender">Select your gender</string>
    <string name="wortise_input_phone">Verify your phone number</string>
</resources>