<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:orientation="vertical"
        android:padding="10.0dip"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16.0sp"
            android:textColor="?android:textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="5.0dip"
            android:layout_marginBottom="20.0dip"
            android:text="@string/wortise_data_request_text" />
        <TextView
            android:textColor="?android:textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="10.0dip"
            android:layout_marginRight="5.0dip"
            android:text="@string/wortise_input_phone" />
        <EditText
            android:id="@id/editPhone"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="+54 1234567890"
            android:inputType="phone" />
        <TextView
            android:textColor="?android:textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_marginRight="5.0dip"
            android:text="@string/wortise_input_age" />
        <EditText
            android:id="@id/editAge"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="22"
            android:inputType="number" />
        <TextView
            android:textColor="?android:textColorSecondary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5.0dip"
            android:layout_marginTop="20.0dip"
            android:layout_marginRight="5.0dip"
            android:text="@string/wortise_input_gender" />
        <Spinner
            android:id="@id/spinnerGender"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined" />
    </LinearLayout>
</ScrollView>