<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="#ff474646"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:id="@id/privacy"
        android:paddingLeft="7.0dip"
        android:paddingTop="7.0dip"
        android:paddingRight="7.0dip"
        android:paddingBottom="7.0dip"
        android:layout_width="30.0dip"
        android:layout_height="30.0dip"
        android:src="@drawable/apnxt_ads_i_icon"
        android:layout_alignParentLeft="true" />
    <TextView
        android:textStyle="bold|italic"
        android:textColor="@android:color/white"
        android:id="@id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="12.0dip"
        android:text="@string/apnxt_6_seconds"
        android:layout_alignParentRight="true" />
    <TextView
        android:textSize="26.0sp"
        android:textColor="@android:color/white"
        android:id="@id/title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/apnxt_which_video_title"
        android:layout_toRightOf="@id/privacy"
        android:layout_below="@id/privacy"
        android:scaleY="1.1" />
    <TextView
        android:textSize="27.0sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:id="@id/secondTile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/apnxt_would_you_like"
        android:layout_below="@id/title"
        android:layout_alignLeft="@id/title"
        android:fontFamily="sans-serif" />
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_marginTop="10.0dip"
        android:layout_below="@id/secondTile">
        <include
            android:id="@id/item1"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            layout="@layout/apnxt_s1t2_item" />
        <include
            android:id="@id/item2"
            android:layout_width="fill_parent"
            android:layout_height="0.0dip"
            android:layout_weight="1.0"
            layout="@layout/apnxt_s1t2_item" />
    </LinearLayout>
</RelativeLayout>