<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="6.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <Spinner
                android:textSize="16.0dip"
                android:id="@id/sp_cat"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip" />
            <EditText
                android:textSize="16.0dip"
                android:id="@id/tv_descr"
                android:visibility="gone"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:hint="@string/descr"
                android:singleLine="true"
                android:maxLength="255"
                android:inputType="textCapSentences" />
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip">
                <TextView
                    android:textSize="16.0dip"
                    android:layout_gravity="center"
                    android:id="@id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:text="@string/cancelar"
                    android:textAllCaps="true" />
                <TextView
                    android:textSize="16.0dip"
                    android:layout_gravity="center"
                    android:id="@id/btn_aceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:text="@string/enviar"
                    android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>