<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="30.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:padding="6.0dip"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content">
            <EditText
                android:textColorHint="@color/grey_400"
                android:id="@id/tv_nick"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="0.0dip"
                android:hint="@string/nombre"
                android:width="120.0dip"
                android:singleLine="true"
                android:inputType="textPersonName|textCapSentences"
                android:layout_marginStart="15.0dip" />
            <Spinner
                android:id="@id/sp_dist"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:prompt="@string/selecciona" />
            <Spinner
                android:id="@id/sp_sexo"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:prompt="@string/selecciona" />
            <Spinner
                android:id="@id/sp_edad1"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:prompt="@string/selecciona" />
            <Spinner
                android:id="@id/sp_edad2"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:prompt="@string/selecciona" />
            <TextView
                android:layout_gravity="center"
                android:id="@id/btn_aceptar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip"
                android:text="@string/aceptar"
                android:textAllCaps="true" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>