<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    android:padding="10.0dip"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <LinearLayout
            android:orientation="vertical"
            android:id="@id/ll_contenido"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TableLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <TableRow>
                    <TextView
                        android:layout_gravity="center_vertical"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contra_act" />
                    <LinearLayout
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">
                        <EditText
                            android:textSize="16.0dip"
                            android:id="@id/et_contra_act"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5.0dip"
                            android:width="120.0dip"
                            android:singleLine="true"
                            android:maxLength="50"
                            android:inputType="textVisiblePassword"
                            android:layout_marginStart="5.0dip" />
                        <ImageView
                            android:layout_gravity="center_vertical"
                            android:id="@id/iv_help"
                            android:layout_width="20.0dip"
                            android:layout_height="20.0dip"
                            android:src="@drawable/help" />
                    </LinearLayout>
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contra_nueva" />
                    <EditText
                        android:textSize="16.0dip"
                        android:id="@id/et_contra_nueva"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:width="150.0dip"
                        android:singleLine="true"
                        android:maxLength="50"
                        android:inputType="textVisiblePassword"
                        android:layout_marginStart="5.0dip" />
                </TableRow>
                <TableRow>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/contra_repe" />
                    <EditText
                        android:textSize="16.0dip"
                        android:id="@id/et_contra_repe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5.0dip"
                        android:width="150.0dip"
                        android:singleLine="true"
                        android:maxLength="50"
                        android:inputType="textVisiblePassword"
                        android:layout_marginStart="5.0dip" />
                </TableRow>
            </TableLayout>
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10.0dip">
                <TextView
                    android:textSize="16.0dip"
                    android:layout_gravity="center"
                    android:id="@id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:text="@string/cancelar"
                    android:textAllCaps="true" />
                <TextView
                    android:textSize="16.0dip"
                    android:layout_gravity="center"
                    android:id="@id/btn_aceptar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10.0dip"
                    android:text="@string/enviar"
                    android:textAllCaps="true" />
            </LinearLayout>
        </LinearLayout>
        <ProgressBar
            android:layout_gravity="center"
            android:id="@id/pb_contra"
            android:visibility="gone"
            android:layout_width="40.0dip"
            android:layout_height="40.0dip" />
        <ProgressBar
            android:layout_gravity="center"
            android:id="@id/pb_contra_inv"
            android:visibility="gone"
            android:layout_width="40.0dip"
            android:layout_height="40.0dip"
            style="@style/pb_inverse" />
    </FrameLayout>
</LinearLayout>